# hackathon-todo

./: .env.example  .gitignore  AUTH_VALIDATION_RULES.md  CLAUDE.md  DEPLOY_PHASE3.md  DEPLOY_RENDER.md  EMAIL_VALIDATION.md  FEATURE_VALIDATION_REPORT.md  GAPS_FILLED_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_FINAL.md  IMPLEMENTATION_SUMMARY.md  PHASES_4_5_ROADMAP.md  POST_LOGIN_FLOW.md  README.md  SUCCESS_MESSAGES.md  render.yaml  test_chatbot.sh
backend/: README.md  TEST_COVERAGE_SUMMARY.md  pyproject.toml  requirements.txt
backend/src/: config.py  main.py  models.py
backend/src/api/: ai_actions.py  ai_health.py  ai_preferences.py  ai_quota.py  auth.py  chat.py  tasks.py
backend/src/auth/: __init__.py  jwt.py  middleware.py
backend/src/db/: __init__.py  connection.py  init_db.py  seed_ai_defaults.py
backend/src/lib/: __init__.py
backend/src/services/: task_action_service.py
backend/src/services/ai/: __init__.py  agent_service.py  ai_context_service.py  chat_service.py  nlp_service.py  prompt_templates.py  rate_limiter.py  task_assistance_service.py  user_preferences_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_chat_api.py
backend/tests/unit/: __init__.py  test_chat_service.py  test_rate_limiter.py
console-app/: FIXES_APPLIED.md  PHASE_I_COMPLETE.md  README.md  TEST_RESULTS.md  demo_library.py  pyproject.toml  test_cli_demo.py
console-app/src/: __init__.py
console-app/src/console_app/: __init__.py  __main__.py
console-app/src/console_app/cli/: __init__.py  main.py
console-app/src/console_app/lib/: __init__.py  storage.py  todo_manager.py
console-app/tests/: __init__.py
console-app/tests/contract/: __init__.py  test_cli_contract.py
console-app/tests/integration/: __init__.py  test_user_journeys.py
console-app/tests/unit/: test_todo.py  test_todo_manager.py
docs/: deployment.md
(+79 files in other folders)
